[tool.poetry]
name = "runhouse"
version = "0.1.1"
description = "Runhouse CLI and Python Package"
authors = ["Josh Lewittes <josh.lewittes@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runhouse = "runhouse.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.4.1"}
attrs = "21.4.0"
bcrypt = "3.2.2"
boto3 = "1.23.0"
botocore = "1.26.0"
cachetools = "5.0.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
click = "7.1.2"
colorama = "0.4.4"
cryptography = "37.0.2"
google-auth = "2.6.6"
idna = "3.3"
importlib-metadata = "4.11.3"
iniconfig = "1.1.1"
jmespath = "1.0.0"
paramiko = "2.10.4"
requests = "2.27.1"
requests-oauthlib = "1.3.1"
rsa = "4.8"
s3transfer = "0.5.2"
shellingham = "1.4.0"
typing-extensions = "4.2.0"
urllib3 = "1.26.9"
websocket-client = "1.3.2"
zipp = "3.8.0"
kubernetes = "23.6.0"
oauthlib = "3.2.0"
packaging = "21.3"
pluggy = "0.13.1"
py = "1.11.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
PyNaCl = "1.5.0"
pyparsing = "3.0.8"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
PyYAML = "6.0"
docker = "5.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
