[tool.poetry]
name = "runhouse"
version = "0.1.1"
description = "Runhouse CLI and Python Package"
authors = ["Josh Lewittes <josh.lewittes@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
runhouse = "runhouse.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.4.1"}
attrs = "21.4.0"
bcrypt = "3.2.2"
cachetools = "5.0.0"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
click = "7.1.2"
colorama = "0.4.4"
cryptography = "37.0.2"
idna = "3.3"
importlib-metadata = "4.11.3"
iniconfig = "1.1.1"
paramiko = "2.10.4"
rsa = "4.8"
typing-extensions = "4.2.0"
zipp = "3.8.0"
packaging = "21.3"
pluggy = "0.13.1"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
PyNaCl = "1.5.0"
pyparsing = "3.0.8"
python-dateutil = "2.8.2"
python-dotenv = "0.20.0"
PyYAML = "6.0"
docker = "5.0.3"
boto3 = "^1.24.13"
redis = "^4.3.3"
fsspec = "^2022.5.0"
ray = "^1.13.0"
gitdb = "4.0.9"
validators = "0.20.0"
GitPython = "^3.1.27"
botocore = "^1.27.46"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
