[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["runhouse/servers/grpc/unary_pb2.py", "runhouse/servers/grpc/unary_pb2_grpc.py", "runhouse/resources/hardware/sky/"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
